# sentinel-desktop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ANALYSIS_COMPLETE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PRIORITIES_COMPLETE.md  DEBUG_REPORT.md  GRIND-BACKLOG.md  LICENSE  PRIORITIES_COMPLETED.md  PROJECT_STATUS.md  PROJECT_STATUS_SUMMARY.md  README.md  RECOMMENDATIONS.md  RELEASING.md  ROADMAP-v3.md  ROADMAP-v30.md  SPEC-v26.md  STATUS.md  STATUS_SUMMARY.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  commit_changes.py  config.py  coverage.json  grind-loop.sh  grind-phase.sh  install_and_run.bat  main.py  mypy.ini  profile_ocr.py  pyproject.toml  requirements.txt  run-grind-phase.sh  run-grind.sh  run-grind.sh.bak  run_tests.sh  run_tests_no_timeout.sh  (+8 more)
.github/: pytest-cleanup.md
.github/workflows/: build.yml  ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  REQUIREMENTS_v5.md  ROADMAP.md  ROADMAP_v5.md  STATE.md
.pytest_tmp/: test_add_invalid_cron_raisescurrent  test_add_invalid_type_raisescurrent  test_add_presolves_presetcurrent  test_add_returns_task_dictcurrent  test_add_task_during_tickcurrent  test_admin_can_do_anythingcurrent  test_after_password_change_rotcurrent  test_all_due_tasks_executecurrent  test_all_rotated_returns_emptycurrent  test_apply_filter_by_categorycurrent  test_apply_filter_by_search_qucurrent  test_authenticate_api_key_unkncurrent  test_authenticate_api_keycurrent  test_authenticate_default_admicurrent  test_authenticate_unknown_usercurrent  test_authenticate_upgrades_legcurrent  test_authenticate_wrong_passwocurrent  test_auto_save_run_without_runcurrent  test_builds_entries_with_defaucurrent  test_builds_with_empty_basecurrent  test_callback_exception_does_ncurrent  test_card_click_binding_invokecurrent  test_case_insensitive_formatcurrent  test_category_filter_then_searcurrent  test_changed_password_no_rotatcurrent  test_clean_removes_dirscurrent  test_clean_with_no_artifactscurrent  test_cleanup_after_corrupt_stacurrent  test_cleanup_after_missing_stacurrent  test_clear_allcurrent  test_command_branch_calls_run_current  test_command_failure_returns_ecurrent  test_concurrent_load_operationcurrent  test_concurrent_save_operationcurrent  test_concurrent_savescurrent  test_consecutive_start_calls_icurrent  test_contains_base_and_extcurrent  test_contains_timestampcurrent  test_containscurrent  test_corrupt_config_handledcurrent  (+383 more)
.pytest_tmp/test_add_presolves_preset0/: tasks.json
.pytest_tmp/test_add_returns_task_dict0/: tasks.json
.pytest_tmp/test_add_task_during_tick0/: tasks.json
.pytest_tmp/test_admin_can_do_anything0/: users.json
.pytest_tmp/test_after_password_change_rot0/: users.json
.pytest_tmp/test_all_due_tasks_execute0/: tasks.json
.pytest_tmp/test_all_rotated_returns_empty0/: users.json
.pytest_tmp/test_authenticate_api_key0/: users.json
.pytest_tmp/test_authenticate_api_key_unkn0/: users.json
.pytest_tmp/test_authenticate_default_admi0/: users.json
.pytest_tmp/test_authenticate_unknown_user0/: users.json
.pytest_tmp/test_authenticate_upgrades_leg0/: users.json
.pytest_tmp/test_authenticate_wrong_passwo0/: users.json
.pytest_tmp/test_callback_exception_does_n0/: tasks.json
.pytest_tmp/test_callback_exception_does_n1/: tasks.json
.pytest_tmp/test_changed_password_no_rotat0/: users.json
.pytest_tmp/test_cleanup_after_corrupt_sta0/: tasks.json
.pytest_tmp/test_cleanup_after_missing_sta0/: tasks.json
.pytest_tmp/test_command_branch_calls_run_0/: tasks.json
.pytest_tmp/test_command_failure_returns_e0/: tasks.json
.pytest_tmp/test_concurrent_load_operation0/: tasks.json
api/: __init__.py  routes.py  server.py
config/: policy.json
core/: __init__.py  action_executor.py  action_registry.py  action_schemas.py  agent_pool.py  app_profiles.py  approval_gate.py  audio.py  audit_chain.py  audit_export.py  auth.py  browser.py  checkpoint.py  cli.py  click_verify.py  clipboard.py  command_palette.py  computer_use.py  config_legacy.py  config_store.py  cost_tracker.py  dashboard.py  desktop.py  dpi.py  encryption.py  engine.py  failsafe.py  file_ops.py  file_watcher.py  forensic_log.py  http_client.py  jwt_auth.py  launcher.py  legacy_brain.py  legacy_engine.py  legacy_plugins.py  llm_client.py  local_grounding.py  marketplace.py  mfa_detection.py  (+41 more)
dashboard/: app.js  index.html  styles.css
docs/: PYPI_TRUSTED_PUBLISHING_SETUP.md  ROADMAP-v18-to-v22.md  ROADMAP-v4-to-v13.md
eval/: __init__.py  registry.py  report.py  runner.py  scenario.py
gui/: __init__.py  app.py  cursor_overlay.py  overlay.py  recorder_panel.py  system_tray.py  themes.py  tray.py
installer/: build.py  mdm.py  sentinel-desktop.iss
memory/: MEMORY.md  current-project-status.md  episodes.jsonl  grind-backlog-priority.md  grind-loop-protocol.md  maintenance-pass-2026-07-13.md  semantic.db  test-timeout-fix-2026-07-13.md  v22-quality-gates.md
plugins/: template.py
scripts/: pre-push-gate.sh  seed_brain.py  test-backlog-parser.sh  verify_it_support.py
src/: cli.py  config.py
tests/: conftest.py  test_action_executor.py  test_action_executor_dryrun_gaps.py  test_action_executor_gaps2.py  test_action_executor_gaps3.py  test_action_executor_gaps4.py  test_action_executor_gaps5.py  test_action_parsing.py  test_action_registry.py  test_action_schemas.py  test_action_schemas_gaps.py  test_agent.py  test_agent_pool.py  test_agent_pool_clear.py  test_agent_pool_edge_cases.py  test_agent_pool_gaps.py  test_agent_pool_ordering.py  test_annotator_gaps.py  test_api_routes.py  test_api_server.py  test_api_server_error_branches.py  test_api_server_gaps.py  test_api_server_pty_gaps.py  test_api_server_timeouts.py  test_api_server_v10_v11_v12.py  test_api_server_websocket.py  test_app.py  test_app_profiles.py  test_approval_gaps.py  test_approval_gate.py  test_audio.py  test_audit_chain.py  test_audit_export.py  test_audit_export_coverage.py  test_audit_export_gaps.py  test_auth.py  test_auth_bcrypt.py  test_auth_gaps.py  test_auth_jwt.py  test_auth_rotation.py  (+307 more)
(+399 files in other folders)
