[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-desktop"
dynamic = ["version"]
description = "AI-powered Windows desktop automation agent."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sentinel Labs" }]
keywords = ["automation", "llm", "agent", "desktop", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "customtkinter ~= 5.2",
    "pyautogui ~= 0.9.54",
    "psutil ~= 5.9",
    "Pillow ~= 10.0",
    "pyperclip ~= 1.8",
    "requests ~= 2.31",
    "httpx ~= 0.27",
    "fastapi ~= 0.110",
    "uvicorn ~= 0.27",
    "websockets ~= 12.0",
    "pydantic ~= 2.5",
    "pygetwindow ~= 0.0.9; sys_platform == 'win32'",
]

[project.optional-dependencies]
ocr = [
    "opencv-python ~= 4.8",
    "pytesseract ~= 0.3.10",
]
screenshot = [
    "mss ~= 9.0",
]
tray = [
    "pystray ~= 0.19",
]
windows = [
    "pywin32 >= 306; sys_platform == 'win32'",
    "uiautomation ~= 2.0; sys_platform == 'win32'",
    "keyboard ~= 0.13.5; sys_platform == 'win32'",
]
dev = [
    "pytest ~= 8.0",
    "pytest-cov ~= 4.1",
    "ruff ~= 0.4",
    "mypy ~= 1.8",
    "pip-audit ~= 2.7",
    "pre-commit ~= 3.6",
]
all = [
    "sentinel-desktop[ocr,screenshot,tray]",
]

[project.urls]
Homepage = "https://github.com/dirtysouthalpha/sentinel-desktop"
Issues = "https://github.com/dirtysouthalpha/sentinel-desktop/issues"

[project.scripts]
sentinel-desktop = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["core*", "api*", "gui*", "plugins*"]
exclude = ["tests*", "scripts*", "installer*"]

[tool.setuptools.dynamic]
version = { attr = "core.__version__" }

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist", "installer/output"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line length handled by formatter
    "E701",  # `class X: y = 1` one-liners are fine for tiny stubs
    "E702",  # ``a; b`` style is widespread in the codebase; not a bug class
    "B007",  # unused loop control var; harmless and widespread
    "B008",  # function call in default arg (FastAPI Depends pattern)
    "S101",  # assert (fine in tests)
    "S104",  # bind to 0.0.0.0 — acceptable default for the local API server (gated by SENTINEL_API_TOKEN)
    "S110",  # try-except-pass — widespread graceful-degradation pattern; tighten module-by-module
    "S112",  # try-except-continue — same as S110
    "S603",  # subprocess-without-shell-equals-true (we use list form intentionally)
    "S607",  # partial executable path (Windows PATH lookup is the right behavior)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603", "S607", "E701"]
"installer/*" = ["S603", "S607"]
"core/auth.py" = ["S324"]  # SHA-256 password hashing — see TODO to migrate to bcrypt

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
